This should get rid off the wayward regex for real.