@@ -1,6 +1,5 @@
 package org.frankframework.util;
 
-import static java.util.Arrays.asList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -189,11 +188,14 @@ class StringUtilTest {
 
 	public static Stream<Arguments> testSplitStringDefaultDelimiter() {
 		return Stream.of(
-				arguments("a,b", asList("a", "b")),
-				arguments(",a,,b,", asList("a", "b")),
-				arguments(" a , b ", asList("a", "b")),
-				arguments(null, Collections.emptyList()),
-				arguments("", Collections.emptyList())
+				arguments("a,b", List.of("a", "b")),
+				arguments(",a,,b,", List.of("a", "b")),
+				arguments("  a  , b ", List.of("a", "b")),
+				arguments(null, List.of()),
+				arguments("", List.of()),
+				arguments("      ", List.of()),
+				arguments(",,,,,", List.of()),
+				arguments(",,      ,,,", List.of())
 		);
 	}
 
@@ -204,22 +206,23 @@ class StringUtilTest {
 		List<String> result = StringUtil.split(input);
 
 		// Assert
-		assertIterableEquals(expected, result);
+		assertIterableEquals(expected, result, () -> "With input [" + escapeUnprintable(input) + "] and default delimiter [,] expected result [" + String.join("|", expected) + "] but instead got [" + String.join("|", result) + "]");
 	}
 
 	public static Stream<Arguments> testSplitStringCustomDelimiters() {
 		return Stream.of(
-				arguments(null, "\\/", Collections.emptyList()),
-				arguments("", "\\/", Collections.emptyList()),
-				arguments("a,b;c", ";,", asList("a", "b", "c")),
-				arguments("a,b;c d", ";,", asList("a", "b", "c d")),
-				arguments("a b c", " ", asList("a", "b", "c")),
-				arguments("a,b c", " ", asList("a,b", "c")),
-				arguments("a, b c", ", ", asList("a", "b", "c")),
-				arguments(";a,b;,c,", ";,", asList("a", "b", "c")),
-				arguments(" a , ;  b;,c ; ", ";,", asList("a", "b", "c")),
-				arguments(" a , ;  b  c  ", " ;,", asList("a", "b", "c")),
-				arguments(" a , b  c\t d\re  \n f  \f  g", ", \t\r\n\f", asList("a", "b", "c", "d", "e", "f", "g"))
+				arguments(null, "\\/", List.of()),
+				arguments("", "\\/", List.of()),
+				arguments("                             ", " ", List.of()),
+				arguments("a,b;c", ";,", List.of("a", "b", "c")),
+				arguments("a,b;c d", ";,", List.of("a", "b", "c d")),
+				arguments("a b c", " ", List.of("a", "b", "c")),
+				arguments("a,b c", " ", List.of("a,b", "c")),
+				arguments("a, b c", ", ", List.of("a", "b", "c")),
+				arguments(";a,b;,c,", ";,", List.of("a", "b", "c")),
+				arguments(" a , ;  b;,c ; ", ";,", List.of("a", "b", "c")),
+				arguments(" a , ;  b  c  ", " ;,", List.of("a", "b", "c")),
+				arguments(" a , b  c\t d\re  \n f  \f  g", ", \t\r\n\f", List.of("a", "b", "c", "d", "e", "f", "g"))
 		);
 	}
 
@@ -233,7 +236,7 @@ class StringUtilTest {
 		LOG.debug("result [{}]", () -> String.join("|", result));
 
 		// Assert
-		assertIterableEquals(expected, result);
+		assertIterableEquals(expected, result, () -> "With input [" + escapeUnprintable(input) + "] and custom delimiters [" + escapeUnprintable(delimiters) + "] expected result [" + String.join("|", expected) + "] but instead got [" + String.join("|", result) + "]");
 	}
 
 	static String escapeUnprintable(String input) {
